src/objects/State__c.object
<CustomObject>
    <description>This will contain the names of the different states, branch email ids &amp; the details of managers &amp; accountants</description>
    <fields>
        <fullName>Branch_Accountant_Email_Id__c</fullName>
        <description>Branch Accountant email id</description>
        <label>Branch Accountant Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Branch_Accountant_Name__c</fullName>
        <label>Branch Accountant Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Manager_Email_Id__c</fullName>
        <description>Contains Branch Manager email id for the state</description>
        <label>Branch Manager Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Branch_Manager_Name__c</fullName>
        <label>Branch Manager Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Manager_Email_Id__c</fullName>
        <description>This field will contain the email id of the Regional Manager</description>
        <label>Regional Manager Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <description>Name of the state</description>
        <label>State Name</label>
        <picklist>
            <picklistValues>
                <fullName>Andaman and Nicobar Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chhattisgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dadra and Nagar Haveli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daman and Diu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haryana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Himachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu and Kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakshadweep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meghalaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mizoram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagaland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Capital Territory of Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orissa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puducherry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajasthan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sikkim</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Branch Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branch_Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>